--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "r6ttk",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dinesh-tadepalli.github.io/r6ttk",
+  "homepage": "http://dinesh-tadepalli.github.io/r6ttk",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,9 +17,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
